# ekf-slam-crazyflie

./: .gitignore
crazyflies/src/crazyflie_ros2/: setup.py
crazyflies/src/crazyflie_ros2/crazyflie_ros2/: astar_path_planning_node.py  crazyflie_node.py  range_edge_detector_absolute_node.py  simple_mapper_node.py
crazyflies/src/crazyflie_ros2/launch/: crazyflie_mapper_astar_fsm.launch.py  crazyflie_mapper_dsl_boxlanding.launch.py  crazyflie_mapper_dsl_boxlanding_absolute.launch.py  crazyflie_mapper_dsl_fsm.launch.py  crazyflie_sim_mapper_astar_fsm.launch.py  crazyflie_sim_mapper_dsl_boxlanding_absolute.launch.py
crazyflies/src/crazyflie_ros2/script/: autonomous_navigation_node_original.py
crazyflies/src/gslam_msgs/: CMakeLists.txt  package.xml
crazyflies/src/gslam_ros2/: package.xml
crazyflies/src/gslam_ros2/config/: gamepad.yaml  mission.yaml  swarm.yaml
crazyflies/src/gslam_ros2/gslam_ros2/: controller.py  edge_detector_node.py  nav_node.py  range_monitor_node.py
crazyflies/src/gslam_ros2/launch/: controller_launch.py  gslam_bringup.launch.py
hw3_mec559/: CMakeLists.txt  OccupancyGridTest1.txt  OccupancyGridTest2.txt  ScanMatchingData_3.txt  ScanMatchingData_4.txt  plot_problem2.py  plot_problem3.py  plot_problem4.py  problem4.cpp
math_foundations/: ScanMatchingData_1.txt  ScanMatchingData_2.txt  ScanMatchingData_5.txt  problem2.cpp  problem3.cpp
results/: nav_comparison_summary.txt
results/gazebo_full_nav_ekf_bag/: metadata.yaml
results/gazebo_full_nav_odom_only_bag/: metadata.yaml
results/gazebo_test_bag/: metadata.yaml
ros2_workspace/src/crazyflie_mapper/: CMakeLists.txt  package.xml
ros2_workspace/src/crazyflie_mapper/include/crazyflie_mapper/: mapper_node.hpp
ros2_workspace/src/crazyflie_mapper/src/: mapper_node.cpp
ros2_workspace/src/crazyflie_navigation/: CMakeLists.txt  package.xml
ros2_workspace/src/crazyflie_navigation/include/crazyflie_navigation/: box_landing_node.hpp  navigation_node.hpp
ros2_workspace/src/crazyflie_navigation/src/: box_landing_node.cpp  navigation_node.cpp
ros2_workspace/src/crazyflie_planning/: CMakeLists.txt  package.xml
ros2_workspace/src/crazyflie_planning/include/crazyflie_planning/: dstarlite.hpp
ros2_workspace/src/crazyflie_planning/src/: dstarlite.cpp  planning_node.cpp
ros2_workspace/src/crazyflie_ros2/: setup.cfg
ros2_workspace/src/crazyflie_ros2/crazyflie_ros2/: autonomous_navigation_node.py  autonomous_navigation_simple_node.py  box_landing_node.py  box_landing_simple_node.py  crazyflie_sim_node.py  dstarlite_path_planning_node.py  dstarlite_path_planning_simple_node.py  mode_manager_node.py  range_edge_detector_node.py  range_monitor_node.py
ros2_workspace/src/crazyflie_ros2/launch/: crazyflie.launch.py  crazyflie_sim_mapper_dsl_fsm.launch.py  crazyflie_with_simple_mapper.launch.py
ros2_workspace/src/crazyflie_ros2/script/: analyze_range_edges.py
ros2_workspace/src/ekf_slam/: CMakeLists.txt  package.xml
ros2_workspace/src/ekf_slam/config/: gz_bridge.yaml
ros2_workspace/src/ekf_slam/include/ekf_slam/: ekf_core.hpp
ros2_workspace/src/ekf_slam/launch/: ekf_slam_full.launch.py  gazebo_full_nav.launch.py  gazebo_odom_only_nav.launch.py  gazebo_test.launch.py
ros2_workspace/src/ekf_slam/scripts/: analyze_bag.py  analyze_flight_dynamics.py  compare_nav_runs.py  gz_hover.py  gz_takeoff.py  odom_to_pose.py  test_ekf_node.py
ros2_workspace/src/ekf_slam/src/: ekf_core.cpp  ekf_slam_node.cpp
ros2_workspace/src/gslam_msgs/msg/: RawData.msg
ros2_workspace/src/gslam_ros2/: setup.cfg  setup.py
ros2_workspace/src/gslam_ros2/gslam_ros2/: mapper_2d_node.py  mission_manager_node.py  planner_node.py  send_goal.py
