<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_slam</name>
  <version>0.1.0</version>
  <description>EKF-SLAM implementation for Crazyflie using line features</description>
  <maintainer email="user@todo.todo">Renix</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>

  <!-- Message dependencies -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- TF2 for quaternion conversions -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Eigen3 for linear algebra -->
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
